{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 37,
  "lineage": "4c0a0643-c0b6-1cd2-3579-6f94bc9397a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Linux_ImpSolCloud-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:557276325260:instance/i-014a8b1d96adfaceb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014a8b1d96adfaceb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dd9bf185419c91b8"
              }
            ],
            "primary_network_interface_id": "eni-0dd9bf185419c91b8",
            "private_dns": "ip-172-31-47-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.109",
            "public_dns": "ec2-54-224-150-15.compute-1.amazonaws.com",
            "public_ip": "54.224.150.15",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a27bd4b0d8182682",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "test-terraform-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085baef98fb78e8b6",
            "tags": {
              "Name": "Linux_ImpSolCloud-03"
            },
            "tags_all": {
              "Name": "Linux_ImpSolCloud-03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cba49d6636e6c33a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "i-014a8b1d96adfaceb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.test-terraform-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance-web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:557276325260:instance/i-036b67896d800da5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036b67896d800da5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06bfedb778c036368"
              }
            ],
            "primary_network_interface_id": "eni-06bfedb778c036368",
            "private_dns": "ip-172-31-41-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.165",
            "public_dns": "ec2-13-223-81-149.compute-1.amazonaws.com",
            "public_ip": "13.223.81.149",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0245890a29b8c14ab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-web-apache-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085baef98fb78e8b6",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-017fd437d702c92a7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "i-036b67896d800da5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2-web-apache-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-terraform-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557276325260:internet-gateway/igw-0679e0f3fc8c5a521",
            "id": "igw-0679e0f3fc8c5a521",
            "owner_id": "557276325260",
            "region": "us-east-1",
            "tags": {
              "Name": "test-terraform-ig"
            },
            "tags_all": {
              "Name": "test-terraform-ig"
            },
            "vpc_id": "vpc-0b1d0b01c9e23dd96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "igw-0679e0f3fc8c5a521",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-terraform-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557276325260:route-table/rtb-00fc487206874436b",
            "id": "rtb-00fc487206874436b",
            "owner_id": "557276325260",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0679e0f3fc8c5a521",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1d0b01c9e23dd96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "rtb-00fc487206874436b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.test-terraform-ig",
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-web-apache-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557276325260:security-group/sg-017fd437d702c92a7",
            "description": "Security group for EC2 with apache hosted app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017fd437d702c92a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-web-apache-sg",
            "name_prefix": "",
            "owner_id": "557276325260",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-instance-web01_SG"
            },
            "tags_all": {
              "Name": "ec2-instance-web01_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4e5ae1ba2275b18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "sg-017fd437d702c92a7",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557276325260:security-group/sg-0cba49d6636e6c33a",
            "description": "Security group for EC2 instance created from Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cba49d6636e6c33a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-terraform-sg",
            "name_prefix": "",
            "owner_id": "557276325260",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4e5ae1ba2275b18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "sg-0cba49d6636e6c33a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557276325260:subnet/subnet-0ce3d8b1f47e19e80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3d8b1f47e19e80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557276325260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "test-terraform-subnet"
            },
            "tags_all": {
              "Name": "test-terraform-subnet"
            },
            "vpc_id": "vpc-0b1d0b01c9e23dd96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "subnet-0ce3d8b1f47e19e80",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557276325260:vpc/vpc-0b1d0b01c9e23dd96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-068a7b0b1dcc9ab68",
            "default_route_table_id": "rtb-0bfaa18a65b2e4ac2",
            "default_security_group_id": "sg-0ac44951af9c143b6",
            "dhcp_options_id": "dopt-0933f49f415997b47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1d0b01c9e23dd96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfaa18a65b2e4ac2",
            "owner_id": "557276325260",
            "region": "us-east-1",
            "tags": {
              "Name": "test-terraform-vpc"
            },
            "tags_all": {
              "Name": "test-terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557276325260",
            "id": "vpc-0b1d0b01c9e23dd96",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}